== 0.3.0
* add :multi_line_short_history option (activated by default), based on https://gist.github.com/939846
* support =begin...=end comments
* add Shell#multiline? method to check if input should be handled as multi-line input
  * separate Ruby-specific multi-line stuff from general implementation
* tweak rubinius regex (thx to godfat)
* add some basic tests
* force multi-line with ; after input

== 0.2.4
* fix 1.8 warning

== 0.2.3
* fix 0.2.2 bugs
* allow procs as multi_line_prompt (and different default value)

== 0.2.2
* fix for mri regexes

== 0.2.1
* rubinius and jruby support

== 0.2.0
* store buffer in an array instead of a string
* added ctrl+c to remove last line in multi-line situations

== 0.1.4
* be compatible with 0.2.4 (undo monkey patch)

== 0.1.3
* be compatible with 0.2.3
* new default prompt

== 0.1.2
* add a configurable multi-line prompt
* use ripl's latest plugin API for a cleaner implementation

== 0.1.1
* fixes critical bug (no more output after error)

== 0.1.0
* Initial release.